--- a/data/style.css
+++ b/data/style.css
@@ -1070,7 +1070,8 @@ p.filselect i { font-style: normal }
  *   1: header
  *   2: image
  *   3: metadata
- *   4: vote box */
+ *   4: vote box
+ *   6: other user's votes */
 .imageflag { margin: auto }
 .imageflag > div:nth-child(1) { display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 2px }
 .imageflag > div:nth-child(1) span { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 0px 20px }
@@ -1084,9 +1085,10 @@ p.filselect i { font-style: normal }
 .imageflag > div:nth-child(4) ul li     label { display: inline-block; border: 1px solid $secborder$; padding: 7px; width: 100px; white-space: nowrap; margin: 2px 0; cursor: pointer }
 .imageflag > div:nth-child(4) ul li.sel label,
 .imageflag > div:nth-child(4) ul li     label:hover { background-color: $secbg$ }
-.imageflag > table { margin: 15px auto }
-.imageflag > table thead td { text-align: center }
-.imageflag > table td { min-width: 50px }
+.imageflag > div:nth-child(6) { height: 200px; padding: 15px 0 }
+.imageflag > div:nth-child(6) table { margin: 0 auto }
+.imageflag > div:nth-child(6) table thead td { text-align: center }
+.imageflag > div:nth-child(6) table td { min-width: 50px }
 
 
 /****** Icons *******/
