--- a/data/style.css
+++ b/data/style.css
@@ -219,7 +219,7 @@ fieldset.submit .textpreview { margin: 0 auto }
 
 /* .compact input elements are smaller and can be embedded in tables/inline text
  * .stealth input elements pretend to be just regular text, but turn into visibile input elements on mouse-over */
-.compact input.text, .compact select { margin: -2px -1px; padding: 1px 0 }
+.compact input.text, .compact select, .compact textarea { margin: -2px -1px; padding: 1px 0 }
 .compact input.submit                { margin: -2px -1px; padding: 1px 3px }
 .stealth input, .stealth select { font: inherit; background: none; border: 1px solid transparent; -moz-appearance: none; -webkit-appearance: none; appearance: none }
 .stealth input:hover, .stealth input:focus,
@@ -440,6 +440,7 @@ div.vndetails td.anime b      { font-size: 10px; font-weight: normal; padding-ri
 .ulistvn     { padding: 5px 0 0 0 }
 .ulistvn > b { font-size: 14px }
 .ulistvn > span { float: right }
+.ulistvn textarea { width: 100% }
 
 div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid $border$; padding: 3px 5% 0 5%; text-align: center; }
 #vntags span                  { white-space: nowrap; margin-left: 15px; }
