v2rw/VN::Page: Make the release extlink dropdown open on hover
i.e. revert to the old behavior.

I do prefer this behavior and it was easier to implement than I had
expected.

--- a/data/style.css
+++ b/data/style.css
@@ -103,7 +103,8 @@ div.warning h2, div.notice h2 { font-size: 13px; font-weight: bold; margin: 0; }
 .elm_dd_noarrow .elm_dd > a { padding-right: 0 }
 .elm_dd_noarrow .elm_dd > a > span:last-child { display: none }
 .elm_dd_left .elm_dd > div { float: left }
-.elm_dd_left .elm_dd > div > ul { right: 4px; top: -20px }
+.elm_dd_left .elm_dd > div > ul { right: 0; top: -20px }
+.elm_dd_relextlink .elm_dd > a { padding-left: 4px }
 
 
 
