--- a/data/style.css
+++ b/data/style.css
@@ -1115,8 +1115,11 @@ p.filselect i { font-style: normal }
 .imageflag > div:nth-child(4) ul li     label { display: inline-block; border: 1px solid $secborder$; padding: 7px; width: 100px; white-space: nowrap; margin: 2px 0; cursor: pointer }
 .imageflag > div:nth-child(4) ul li.sel label,
 .imageflag > div:nth-child(4) ul li     label:hover { background-color: $secbg$ }
+.imageflag > div:nth-child(4) ul li.overrule label { position: relative; left: 80px; border: none; padding: 0 }
 .imageflag > div:nth-child(6) { min-height: 200px; padding: 15px 0 }
 .imageflag > div:nth-child(6) table { margin: 0 auto }
+.imageflag > div:nth-child(6) table tr.ignored td:nth-child(2),
+.imageflag > div:nth-child(6) table tr.ignored td:nth-child(3) { text-decoration: line-through; color: $grayedout$ }
 .imageflag > div:nth-child(6) table td { min-width: 50px }
 .imageflag .fullscreen { position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-repeat: no-repeat; background-position: center; background-size: contain; background-color: #000 }
 
