--- a/data/style.css
+++ b/data/style.css
@@ -1082,6 +1082,7 @@ p.filselect i { font-style: normal }
  *   4: vote box
  *   6: other user's votes */
 .imageflag { margin: auto }
+.imageflag > ul:nth-child(1) { margin-left: 15px }
 .imageflag > div:nth-child(1) { display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 2px }
 .imageflag > div:nth-child(1) span { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 0px 20px }
 .imageflag > div:nth-child(2) { border: 1px solid $border$; padding: 5px; display: flex; justify-content: center; align-items: center; background: #000 }
