--- a/data/style.css
+++ b/data/style.css
@@ -168,6 +168,8 @@ legend                   { display: none; }
 optgroup option          { padding-left: 10px; font-style: normal; }
 input.submit             { background: $boxbg$; padding: 1px 5px; }
 input.text, select       { width: 200px; }
+input[type=number]       { -moz-appearance:textfield }
+input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0 }
 fieldset.submit          { width: 100%; text-align: center; margin: 5px; }
 fieldset.submit input[type=submit] { width: 150px; }
 fieldset.submit input[type=checkbox] { margin: 0 5px 0 15px; }
