--- a/data/style.css
+++ b/data/style.css
@@ -656,6 +656,12 @@ div.chardetails.charsep      { margin-top: 30px }
 
 /***** Char edit *****/
 
+
+table.chare_traits .buts      { padding: 0 20px }
+table.chare_traits .buts a    { box-sizing: border-box; display: block; width: 15px; height: 14px; border: 1px solid $border$; margin: 0; float: left }
+table.chare_traits .buts a.s0 { border: none; background-color: #0f0 }
+table.chare_traits .buts a.s1 { border: none; background-color: #f80 }
+table.chare_traits .buts a.s2 { border: none; background-color: #f40 }
 #jt_box_chare_img div.img { float: left; height: 300px; padding-right: 20px; }
 #jt_box_chare_img h2      { margin: 0; }
 #jt_box_chare_traits table  { margin-bottom: 10px; margin-left: 10px; }
