--- a/data/style.css
+++ b/data/style.css
@@ -647,9 +647,8 @@ div.chardetails.charsep      { margin-top: 30px }
 .imghover input:checked       ~ div.imghover--warning { display: none }
 .imghover input:not(:checked) ~ div.imghover--visible { display: none }
 .imghover div.imghover--visible a { display: none; white-space: nowrap; font-size: 11px }
-.imghover:hover div.imghover--visible { position: absolute; top: -11px; left: -11px; border: 1px solid $border$; background: $secbg$ }
-.imghover:hover div.imghover--visible img { margin: 10px 10px 0 10px }
-.imghover:hover div.imghover--visible a { display: block }
+.imghover:hover div.imghover--visible { position: absolute }
+.imghover:hover div.imghover--visible a { display: block; position: absolute; right: 0; bottom: 0; padding: 5px 10px; background: $secbg$; border: 0 }
 .imghover div.imghover--warning { border: 1px solid $border$; background: $secbg$; box-sizing: border-box; padding: 10px 5px }
 
 
