--- a/data/style.css
+++ b/data/style.css
@@ -173,10 +173,9 @@ table.formtable tr.newpart td { padding-top: 20px; font-weight: bold; }
 table.formtable td table td { padding: 1px 15px 1px 0px }
 table.formtable td table    { margin-bottom: 5px }
 
-div.formimage > div:nth-child(1) { width: 300px; height: 300px; text-align: center; float: left }
-div.formimage > div:nth-child(1) img { max-width: 290px; max-height: 300px }
-div.formimage > div:nth-child(2) { min-height: 330px }
-div.formimage h2 { margin: 0 }
+table.formimage > tr > td:nth-child(1) { width: 300px; height: 300px; text-align: center }
+table.formimage > tr > td:nth-child(1) img { max-width: 290px; max-height: 500px }
+table.formimage h2 { margin: 0 }
 
 /* Format checkboxes and radio buttons as if they were normal links with unicode icons.
  * Usage:
