--- a/data/style.css
+++ b/data/style.css
@@ -428,20 +428,14 @@ div.postsearch td.tc3             { width: 90px; }
 
 /***** VN page *******/
 
-#nsfw_chk:checked ~ *                    { cursor: pointer; }
-#nsfw_chk:checked ~ * > #nsfw_show       { display: none; }
-#nsfw_chk:not(:checked) ~ * > #nsfw_hid  { display: none; }
-
 #nsfwhide_chk:checked ~ * #nsfwshown   { display: none; }
 #nsfwhide_chk:not(:checked) ~ * .nsfw  { display: none; }
 
 div.vndetails                 { margin: 0 auto; max-width: 820px; }
 div.vnimg                     { float: left; width: 250px; margin: 0 10px; }
-div.vnimg i                   { display: block; width: 100%; text-align: center; font-size: 11px; }
 div.vnimg p                   { text-align: center; padding: 0px; margin: 0; }
 div.vndetails h2              { margin: 5px 0 0 0; }
 .vndesc p                     { padding: 0 0 0 5px; }
-p#nsfw_hid                    { display: block; cursor: pointer; }
 div.vndetails table           { float: left; width: 500px; }
 div.vndetails table td.key    { width: 90px; }
 div.vndetails table dt        { float: left; font-style: italic; }
@@ -633,6 +627,19 @@ div.producerbrowse    { padding-bottom: 10px }
 
 
 
+/***** Image hover thingy (VNWeb::Images::Lib::images_) ****/
+
+.imghover { margin: 0 auto; display: block; text-align: center }
+.imghover input:checked       ~ div.imghover--warning { display: none }
+.imghover input:not(:checked) ~ div.imghover--visible { display: none }
+.imghover div.imghover--visible { position: relative }
+.imghover div.imghover--visible a { border-bottom: 0 }
+.imghover div.imghover--visible .imghover--overlay { display: none; white-space: nowrap; font-size: 11px }
+.imghover:hover div.imghover--visible .imghover--overlay { display: block; position: absolute; right: 0; bottom: 0; padding: 5px 10px; background: $secbg$; border: 0 }
+.imghover div.imghover--warning { border: 1px solid $border$; background: $secbg$; box-sizing: border-box; padding: 10px 5px }
+
+
+
 /***** Char page (also used on VN page) *****/
 
 div.chardetails { margin: 0 auto; width: 800px; }
@@ -643,15 +650,6 @@ div.charimg p   { text-align: center; padding: 0px; margin: 0; }
 div.chardetails table        { float: left; width: 530px; }
 div.chardetails table td.key { width: 100px; }
 div.chardetails.charsep      { margin-top: 30px }
-
-.imghover { margin: 0 auto; position: relative; display: block; text-align: center }
-.imghover input:checked       ~ div.imghover--warning { display: none }
-.imghover input:not(:checked) ~ div.imghover--visible { display: none }
-.imghover div.imghover--visible a { border-bottom: 0 }
-.imghover div.imghover--visible .imghover--overlay { display: none; white-space: nowrap; font-size: 11px }
-.imghover:hover div.imghover--visible { position: absolute }
-.imghover:hover div.imghover--visible .imghover--overlay { display: block; position: absolute; right: 0; bottom: 0; padding: 5px 10px; background: $secbg$; border: 0 }
-.imghover div.imghover--warning { border: 1px solid $border$; background: $secbg$; box-sizing: border-box; padding: 10px 5px }
 
 
 
