--- a/data/style.css
+++ b/data/style.css
@@ -286,7 +286,7 @@ div.mainbox-overflow-hack { overflow: hidden; width: 100%; box-sizing: border-bo
 .mainbox h2          { font-weight: bold; font-size: 16px; margin: 10px 0 0 5px; }
 a.addnew, p.addnew   { float: right; margin: 0 }
 a.mainopts, p.mainopts { float: right; margin: 0 }
-p.mainopts a         { margin: 0 5px }
+p.mainopts a, p.mainopts label { margin: 0 5px }
 
 .mainbox.threelayout    { border-collapse: separate; border-spacing: 10px; margin: 10px -10px -20px -10px; min-width: 100%; }
 .mainbox.threelayout td { width: 32%; padding: 0 2px 10px 2px; }
@@ -428,9 +428,6 @@ div.postsearch td.tc3             { width: 90px; }
 
 /***** VN page *******/
 
-#nsfwhide_chk:checked ~ * #nsfwshown   { display: none; }
-#nsfwhide_chk:not(:checked) ~ * .nsfw  { display: none; }
-
 div.vndetails                 { margin: 0 auto; max-width: 820px; }
 div.vnimg                     { float: left; width: 250px; margin: 0 10px; }
 div.vnimg p                   { text-align: center; padding: 0px; margin: 0; }
@@ -491,8 +488,20 @@ div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid $bo
 #screenshots img          { border: 3px solid transparent; }
 #screenshots a.nsfw img   { border: 3px solid $statnok$; }
 #screenshots a:hover img  { border: 3px solid $border$; }
-#screenshots #nsfwshown   { font-style: normal }
-#screenshots p.nsfwtoggle { float: right; margin: 0; }
+
+#scrhide_s0:checked ~ #screenshots label[for=scrhide_s0],
+#scrhide_s1:checked ~ #screenshots label[for=scrhide_s1],
+#scrhide_s2:checked ~ #screenshots label[for=scrhide_s2],
+#scrhide_v0:checked ~ #screenshots label[for=scrhide_v0],
+#scrhide_v1:checked ~ #screenshots label[for=scrhide_v1],
+#scrhide_v2:checked ~ #screenshots label[for=scrhide_v2] { color: $maintext$ }
+
+#screenshots .scrlnk { display: none }
+#scrhide_s0:checked ~ #screenshots .scrlnk_s0 { display: inline }
+#scrhide_s1:checked ~ #screenshots .scrlnk_s1 { display: inline }
+#scrhide_s2:checked ~ #screenshots .scrlnk    { display: inline }
+#scrhide_v0:checked ~ #screenshots .scrlnk_v0 { display: none }
+#scrhide_v1:checked ~ #screenshots .scrlnk_v1 { display: none }
 
 .summarize_more {
   margin-top: 9px; margin-bottom: -10px; padding: 0; height: 15px;
