--- a/data/style.css
+++ b/data/style.css
@@ -807,6 +807,7 @@ div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }
 .managelabels tfoot div { float: right; text-align: right }
 
 .savedefault { width: 600px; margin: 10px auto }
+.exportlist { width: 600px; margin: 10px auto }
 
 .ulist .tc1 { white-space: nowrap; width: 70px }
 .ulist .tc1 label { cursor: pointer }
