CSS: Move down the .mainopts when there is also a .itemmsg
In particular: move down the spoiler settings on character pages to make
room for the report link.

This is pretty ugly though, I had forgotten that the right-top part of
the character pages was already being used...

--- a/data/style.css
+++ b/data/style.css
@@ -100,7 +100,7 @@ div.warning h2, div.notice h2 { font-size: 13px; font-weight: bold; margin: 0; }
 /* general text formatting */
 
 ul, ol        { margin-left: 35px; }
-p.itemmsg     { float: right; color: $standout$; font-style: italic; margin: 0!important; }
+p.itemmsg     { float: right; color: $standout$; font-style: italic; margin: 0!important; padding-bottom: 10px }
 .grayedout    { color: $grayedout$ }
 b.grayedout   { font-weight: normal }
 i.grayedout   { font-style: normal }
@@ -286,7 +286,7 @@ div.mainbox-overflow-hack { overflow: hidden; width: 100%; box-sizing: border-bo
 .mainbox table p     { margin: 0; }
 .mainbox h2          { font-weight: bold; font-size: 16px; margin: 10px 0 0 5px; }
 a.addnew, p.addnew   { float: right; margin: 0 }
-a.mainopts, p.mainopts { float: right; margin: 0 }
+a.mainopts, p.mainopts { clear: right; float: right; margin: 0 }
 p.mainopts a, p.mainopts label { margin: 0 5px }
 
 .mainbox.threelayout    { border-collapse: separate; border-spacing: 10px; margin: 10px -10px -20px -10px; min-width: 100%; }
