--- a/data/style.css
+++ b/data/style.css
@@ -525,6 +525,7 @@ div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid $bo
 .reviewbox > div:first-child > span:first-child { font-weight: bold }
 .reviewbox > div:nth-child(2) { box-sizing: border-box; padding: 5px 0 }
 .reviewbox > div:last-child { display: flex; justify-content: space-between; border-top: 1px solid $border$ }
+.reviewbox .myvote { font-weight: bold }
 
 
 /***** Vote stats ****/
