--- a/data/style.css
+++ b/data/style.css
@@ -625,6 +625,16 @@ div.producerbrowse    { padding-bottom: 10px }
 #reviewspoil:checked       ~ .fullreview .reviewnotspoil  { display: none }
 
 
+/***** Review browser *****/
+
+.reviewlist td.tc1 { width: 90px }
+.reviewlist td.tc2 { width: 110px; }
+.reviewlist td.tc4 { width: 50px; text-align: right }
+.reviewlist td.tc5 { width: 80px; padding-left: 15px }
+.reviewlist td.tc6 { width: 30px; text-align: right }
+.reviewlist td.tc7 { width: 250px; text-align: right }
+
+
 /***** Release browser *****/
 
 .relbrowse .tc1 { width: 80px }
